optimized BONUS 2  thumbnails click-able section: added a break to the for loops when selected is the same value as the thumbnail clicked on, to stop the loop from repeating again

--- a/bonus/2/css/style.css
+++ b/bonus/2/css/style.css
@@ -148,4 +148,13 @@ img{
     cursor: pointer;
     background-color: rgba(255, 255, 255, 1);
 }
+
+.Spider:hover,
+.Alien:hover,
+.Fortnite:hover,
+.Stray:hover,
+.Avengers:hover{
+    cursor: pointer;
+    filter: brightness(160%) drop-shadow(5px 0 0 crimson);;
+}
 /* HOVER */
